[tool.poetry]
name = "psi-score-collector"
version = "0.1.0"
description = ""
authors = ["Kota Hashihama <kotahashihama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
numpy = "^1.19.0"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
